--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://{DEVWARS_DB_URL}
-spring.datasource.username={DEVWARS_DB_USER}
-spring.datasource.password={DEVWARS_DB_PASSWORD}
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${DEVWARS_DB_URL}
+spring.datasource.username=${DEVWARS_DB_USER}
+spring.datasource.password=${DEVWARS_DB_PASSWORD}
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.logging.level.org.hibernate.SQL=debug
 spring.jpa.show-sql=true
