--- a/src/main/resources/application-devwarsremote.properties
+++ b/src/main/resources/application-devwarsremote.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://${DEVWARS_DB_URL}
+spring.datasource.url=jdbc:mysql://${DEVWARS_DB_URL}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=${DEVWARS_DB_USER}
 spring.datasource.password=${DEVWARS_DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=create
