--- a/src/main/resources/application-localdev.properties
+++ b/src/main/resources/application-localdev.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://${DEVWARS_DB_URL}
-spring.datasource.username=${DEVWARS_DB_USER}
-spring.datasource.password=${DEVWARS_DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost/devwars?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=${APP_DB_USER}
+spring.datasource.password=${APP_DB_USER_PASSWORD}
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.logging.level.org.hibernate.SQL=debug
 spring.jpa.show-sql=true
 server.port=5000
