--- a/src/main/resources/application-localdev.properties
+++ b/src/main/resources/application-localdev.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost/devwars?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=${APP_DB_USER}
 spring.datasource.password=${APP_DB_USER_PASSWORD}
+spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.logging.level.org.hibernate.SQL=debug
