--- a/src/main/resources/application-devwarsremote.properties
+++ b/src/main/resources/application-devwarsremote.properties
@@ -1,7 +1,8 @@
 spring.datasource.url=jdbc:mysql://${DEVWARS_DB_URL}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=${DEVWARS_DB_USER}
 spring.datasource.password=${DEVWARS_DB_PASSWORD}
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
 spring.logging.level.org.hibernate.SQL=debug
 spring.jpa.show-sql=true
