--- a/src/main/resources/application-localdev.properties
+++ b/src/main/resources/application-localdev.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost/devwars?useUnicode=true&useJDBCComp
 spring.datasource.username=${APP_DB_USER}
 spring.datasource.password=${APP_DB_USER_PASSWORD}
 spring.datasource.initialization-mode=always
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.logging.level.org.hibernate.SQL=debug
 spring.jpa.show-sql=true
